Add Ollama LLM configuration to environment and refactor model usage in agents

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,7 @@ CODING_DIR=coding
 HOST=0.0.0.0
 PORT=8006
 DEBUG=false
+
+# Ollama LLM Configuration
+OLLAMA_BASE_URL=http://127.0.0.1:11434
+OLLAMA_MODEL=gpt-oss:20b
