--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,44 @@
-fastapi
-uvicorn[standard]
+# Core Web Framework
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
 python-multipart==0.0.6
+
+# Data Processing & Analysis
+pandas>=2.0.0
+numpy>=1.24.0
 openpyxl==3.1.2
-python-dotenv
-psutil
+tiktoken
+openai
+# Database Support
+psycopg2-binary>=2.9.0  # PostgreSQL adapter
+pymysql>=1.1.0  # MySQL adapter
+cryptography>=41.0.0  # For Fernet encryption
+
+# System & Utilities
+python-dotenv>=1.0.0
+psutil>=5.9.0
+
+# AutoGen AI Framework
+autogen-agentchat>=0.2.0
+autogen-core>=0.2.0  
+autogen-ext>=0.2.0
+autogen-ext[docker]
+docker
+# LangChain Integration
+langchain>=0.1.0
+langchain-community>=0.0.20
+langchain-core>=0.1.0
+langchain-ollama>=0.0.1
+
+# ChromaDB for Vector Storage
+chromadb>=0.4.0
+
+# HTTP Requests
+requests>=2.31.0
+
+# SQL and Database Tools
+sqlalchemy>=2.0.0
+
+# Additional Python Standard Library (usually built-in but explicit for clarity)
+# asyncio, csv, json, os, re, shutil, sqlite3, time, traceback, uuid
+# datetime, io, pathlib, typing, concurrent.futures, base64, hashlib
